# Morpher_CGRA_Mapper

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  call_gnn.sh  placement_0x7fff17be9ba0.json  run_all_44_mpeg.sh  run_all_44_mpeg_hycube.sh  run_all_hycube.sh  run_all_parse_dct_mem.sh  run_all_parse_fft_mem.sh  run_all_parse_gemm_mem.sh  run_exper.py  run_instructions  run_realgsm_fair.sh  run_single_aes_mem.sh  run_single_fair.sh  run_single_gemm_mem.sh  run_single_hycube_hop.sh  run_single_parse.sh  update_mem_alloc.py
src/: .PathFinderMapper.cpp.swo  .PathFinderMapper.cpp.swp  AMRRG.cpp  AMRRG.h  CGRA.cpp  CGRA.h  CGRA_xml_compiler.cpp  CMakeLists.txt  DFG.cpp  DFG.h  DFGEdge.cpp  DFGEdge.h  DFGNode.cpp  DFGNode.h  DataPath.cpp  DataPath.h  FU.cpp  FU.h  HeuristicMapper.cpp  HeuristicMapper.h  MRRGNode.cpp  MRRGNode.h  Module.cpp  Module.h  PE.cpp  PE.h  PE_abstract.cpp  PE_abstract.h  PathFinderMapper.cpp  PathFinderMapper.h  Port.cpp  Port.h  RegFile.cpp  RegFile.h  SimulatedAnnealingMapper.cpp  SimulatedAnnealingMapper.h  abstract_map_main.cpp  bfs_shortes_path.hpp  debug.h  placement_0x7fffffffda00.json  (+3 more)
src/arch/: CGRA.cpp  DataPath.cpp  FU.cpp  Module.cpp  PE.cpp  Port.cpp  RegFile.cpp
src/dfg/: DFG.cpp  DFGEdge.cpp  DFGNode.cpp
src/lisa/: LISAController.cpp  LISAController.h  LISADFG.cpp  LISADFG.h  LISAMapper.cpp  LISAMapper.h  LISASchedule.cpp  LISASchedule.h  gnn.cpp  gnn.h
src/mapper/: HeuristicMapper.cpp  PathFinderMapper.cpp  SimulatedAnnealingMapper.cpp
src/mapping_visualizer/: visualize_mapping.py
src/util/: tinyxml2.cpp
(+208 files in other folders)
